--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,12 +2,15 @@ name: test
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - master
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - name: Run script
         run: |
-          echo test
+          echo "test self-hosted runner"
