--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,8 +18,8 @@ jobs:
           echo ${{ secrets.MY_SECRET }}
 
   test-var:
-    runs-on: self-hosted
-    if: ${{ vars.MY_VAR }}
+    runs-on: ubuntu-latest
+    if: ${{ vars.MY_VAR == "something" }}
     steps:
       - uses: actions/checkout@v4
       - name: Run script
