--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,14 +16,14 @@ on:
         description: 'True to print to STDOUT'
         required: true
         type: boolean
-      tags:
-        description: 'Test scenario tags'
-        required: true
+      some_string:
+        description: 'string'
+        required: false
         type: string
       some_number:
         description: 'number'
         type: number
-        required: true
+        required: false
   push:
     branches:
       - master
@@ -35,4 +35,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run script
         run: |
-          echo "test number input ${{ inputs.some_number }}"
+          echo "test default input number ${{ inputs.some_string }}"
+          echo "test default input string ${{ inputs.some_number }}"
