--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -1,10 +1,10 @@
 name: "CodeQL config"
 queries: 
-  javascript:
-    - uses: security-extended
-    - uses: security-and-quality
-  python:
-    - uses: security-extended
+  - uses: security-extended
+  - uses: security-and-quality
 paths-ignore:
   - tests
   - lib
+query-filters:
+  - exclude:
+      id: js/code-injection
