Comment query filters

--- a/codeql/codeql-config.yml
+++ b/codeql/codeql-config.yml
@@ -5,6 +5,6 @@ queries:
 paths-ignore:
   - tests
   - lib
-query-filters:
- - exclude:
-     id: js/code-injection
+#query-filters:
+# - exclude:
+#     id: js/code-injection
