--- a/codeql/codeql-config.yml
+++ b/codeql/codeql-config.yml
@@ -2,9 +2,10 @@ name: "CodeQL config"
 queries: 
   - uses: security-extended
   - uses: security-and-quality
+  - uses: ./queries
 paths-ignore:
   - tests
   - lib
-#query-filters:
-# - exclude:
-#     id: js/code-injection
+query-filters:
+ - exclude:
+     id: js/code-injection
