Disable default queries

--- a/codeql/codeql-config.yml
+++ b/codeql/codeql-config.yml
@@ -1,11 +1,10 @@
 name: "CodeQL config"
 queries: 
-  - uses: security-extended
-  - uses: security-and-quality
   - uses: ./queries
 paths-ignore:
   - tests
   - lib
+disable-default-queries: true
 # query-filters:
 #  - exclude:
 #      id: js/code-injection
