--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -20,5 +20,5 @@ jobs:
       - name: 'Dependency Review'
         uses: actions/dependency-review-action@v3
         with:
-          comment-summary-in-pr: true
+          comment-summary-in-pr: on-failure
           fail-on-severity: moderate
