--- a/.github/workflows/aws_integration_request.yaml
+++ b/.github/workflows/aws_integration_request.yaml
@@ -15,9 +15,16 @@ jobs:
         id: parse-issue
         uses: zentered/issue-forms-body-parser@v2.2.0
       - name: Update configuration file
+        working-directory: infra
         run: |
           AWS_ACCOUNT_ID=$(echo '${{ steps.parse-issue.outputs.data }}' | jq -r '.["aws-account-id"].text')
           echo "New account ID env: $AWS_ACCOUNT_ID"
-          cd infra
           jq --arg id "$AWS_ACCOUNT_ID" '.account_ids += [$id]' config.json > temp.json && mv temp.json config.json
           cat config.json
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          commit-message: "Update configuration file with new AWS account ID"
+          title: "Add requested AWS Integration"
+          labels: aws-integration-request
+          add-paths: infra/config.json
