write-all permissions

--- a/.github/workflows/aws_integration_request.yaml
+++ b/.github/workflows/aws_integration_request.yaml
@@ -4,6 +4,8 @@ on:
   issues:
     labels: [aws-integration-request]
 
+permissions: write-all
+
 jobs:
   process:
     name: Process AWS Integration Request
