--- a/.github/workflows/aws_integration_request.yaml
+++ b/.github/workflows/aws_integration_request.yaml
@@ -30,7 +30,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "Update configuration file with new AWS account ID"
           body: "This PR updates the configuration file with the new AWS account ID provided in the issue #${{ github.event.issue.number }}."
-          title: "Add requested AWS Integration"
+          title: "Add AWS Integration requested in #${{ github.event.issue.number }}"
           labels: aws-integration-request
           add-paths: infra/config.json
           branch: aws-integration-request-${{ github.event.issue.number }}
