--- a/.github/workflows/comment-new-issue.yaml
+++ b/.github/workflows/comment-new-issue.yaml
@@ -13,7 +13,7 @@ jobs:
       issues: write
     steps:
       - name: Add comment
-        run: gh issue comment "$NUMBER" --body '$BODY'
+        run: gh issue comment "$NUMBER" --body "$BODY"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
@@ -40,7 +40,7 @@ jobs:
   
               Thank you for your understanding and contribution! :rocket:
             `;
-            github.issues.createComment({
+            github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
