--- a/.github/workflows/comment-new-issue.yaml
+++ b/.github/workflows/comment-new-issue.yaml
@@ -3,9 +3,7 @@ on:
   issues:
     types:
       - opened
-      - labeled
-      - closed
-      - reopened
+
 jobs:
   add-comment:
     runs-on: ubuntu-latest
@@ -13,26 +11,12 @@ jobs:
       issues: write
     steps:
       - name: Add comment
-        run: gh issue comment "$NUMBER" --body "$BODY"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REPO: ${{ github.repository }}
-          NUMBER: ${{ github.event.issue.number }}
-          BODY: >
-            Hello :wave:,
-
-            Please note that the core maintainer of this repository will not be available for support or any work on this repo for the upcoming months. As a result, new features will not be added during this period. Only additions or updates of new questions or study resources will be accepted. 
-
-            We encourage you to follow the [CONTRIBUTING](https://github.com/FidelusAleksander/ghcertified/blob/master/CONTRIBUTING.md) guide and raise pull requests with fixes for content issues you find. Content pull requests will be reviewed by another maintainer.
-
-            Thank you for your understanding and contribution! :rocket:
-      - name: Comment on issue
         uses: actions/github-script@v7
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             const issueComment = `
-              Hello script :wave:,
+              Hello @${{ github.event.issue.user.login }} :wave:,
 
               Please note that the core maintainer of this repository will not be available for support or any work on this repo for the upcoming months. As a result, new features will not be added during this period. Only additions or updates of new questions or study resources will be accepted. 
   
