--- a/.github/workflows/comment-new-issue.yaml
+++ b/.github/workflows/comment-new-issue.yaml
@@ -3,10 +3,13 @@ on:
   issues:
     types:
       - opened
+      - reopened
+      - closed
+      - edited
 
 jobs:
   add-comment:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       issues: write
     steps:
