--- a/.github/workflows/test-find-issue.yml
+++ b/.github/workflows/test-find-issue.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   find_exercise:
     name: Find Exercise Issue
-    uses: skills/exercise-toolkit/.github/workflows/find-exercise-issue.yml@main
+    uses: skills/exercise-toolkit/.github/workflows/find-exercise-issue.yml@update-find-exercise
 
   print_outputs:
     needs: find_exercise
