--- a/.github/workflows/translate-readme.yml
+++ b/.github/workflows/translate-readme.yml
@@ -2,9 +2,10 @@ name: Translate README
 
 on:
   push:
-    paths:
-      - 'README.md'
   workflow_dispatch:
+
+env:
+  BRANCH_NAME: docs/update-readme-translations
 
 permissions:
   contents: write
@@ -12,27 +13,38 @@ permissions:
   models: read
 
 jobs:
+  create-branch:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create branch if not exists
+        run: |
+          git fetch origin
+          git checkout -B ${{ env.BRANCH_NAME }}
+          git push -f origin ${{ env.BRANCH_NAME }}
+
   translate:
+    needs: create-branch
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        language: ['spanish', 'french', 'german', 'chinese', 'polish']
+        language: ["spanish", "french", "german", "chinese", "polish"]
         include:
-          - language: 'spanish'
-            file: 'README.es.md'
-          - language: 'french'
-            file: 'README.fr.md'
-          - language: 'german'
-            file: 'README.de.md'
-          - language: 'chinese'
-            file: 'README.zh.md'
-          - language: 'polish'
-            file: 'README.pl.md'
+          - language: "spanish"
+            file: "README.es.md"
+          - language: "french"
+            file: "README.fr.md"
+          - language: "german"
+            file: "README.de.md"
+          - language: "chinese"
+            file: "README.zh.md"
+          - language: "polish"
+            file: "README.pl.md"
 
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: docs/update-readme-translations
+          ref: ${{ env.BRANCH_NAME }}
 
       - uses: actions/checkout@v4
         with:
@@ -45,9 +57,9 @@ jobs:
         uses: ./ai-translate
         id: translate
         with:
-          text-file: 'README.md'
+          text-file: "README.md"
           target-language: ${{ matrix.language }}
-          custom-instructions: "Keep technical terms and code in English."
+          custom-instructions: "Keep technical terms in English. Don't translate code blocks"
 
       - name: Save translation
         run: echo "${{ steps.translate.outputs.translated-text }}" > docs/${{ matrix.file }}
@@ -55,8 +67,8 @@ jobs:
       - name: Commit translation
         uses: EndBug/add-and-commit@v9
         with:
-          add: 'docs/${{ matrix.file }}'
-          message: 'docs: update ${{ matrix.language }} translation of README'
+          add: "docs/${{ matrix.file }}"
+          message: "docs: update ${{ matrix.language }} translation of README"
           default_author: github_actions
 
   create-pr:
@@ -72,7 +84,7 @@ jobs:
             This PR updates all translations of the README:
 
             Changes were automatically generated using the AI Translate action.
-          branch: "docs/update-readme-translations"
+          branch: ${{ env.BRANCH_NAME }}
           delete-branch: true
           labels: |
             documentation
