--- a/.github/workflows/translate-readme.yml
+++ b/.github/workflows/translate-readme.yml
@@ -71,11 +71,10 @@ jobs:
     needs: translate
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          commit-message: "docs: update translations of README"
-          title: "docs: update translations of README"
           body: |
             This PR updates all translations of the README:
 
