--- a/.github/workflows/translate-readme-artifacts.yml
+++ b/.github/workflows/translate-readme-artifacts.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Upload translation artifact
         uses: actions/upload-artifact@v4
         with:
+          name: ${{ matrix.file}}
           path: docs/${{ matrix.file }}
 
   create-pr:
