--- a/.github/workflows/translate-readme-artifacts.yml
+++ b/.github/workflows/translate-readme-artifacts.yml
@@ -29,16 +29,16 @@ jobs:
 
       - name: Save test translation
         run: |
-          mkdir -p docs
-          echo "$TRANSLATED_TEXT" | tee docs/${{ matrix.file }}
+          mkdir -p translations
+          echo "$TRANSLATED_TEXT" | tee translations/${{ matrix.file }}
         env:
           TRANSLATED_TEXT: ${{ matrix.language }}
 
       - name: Upload translation artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.file}}
-          path: docs/${{ matrix.file }}
+          name: translations
+          path: translations/${{ matrix.file }}
 
   create-pr:
     needs: translate
@@ -46,13 +46,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download all translation artifacts
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
-          path: docs
-      - name: Echo all translation artifacts
-        run: |
-          ls -la docs
+          path: translations
+          merge-multiple: true
+
+      - name: Display structure of downloaded files
+        run: ls -R translations
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
@@ -64,7 +64,7 @@ jobs:
 
             Changes were automatically generated using the AI Translate action.
           branch: ${{ env.BRANCH_NAME }}
-          add-paths: "docs/README*"
+          add-paths: "translations/README*"
           delete-branch: true
           labels: |
             documentation
