--- a/.github/workflows/pr-title-checker.yml
+++ b/.github/workflows/pr-title-checker.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: FidelusAleksander/prompt
-          ref: v1
+          ref: main
           token: ${{ secrets.PAT }}
 
       - name: Generate AI response
