--- a/.github/workflows/pr-title-checker.yml
+++ b/.github/workflows/pr-title-checker.yml
@@ -8,7 +8,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  respond-to-issue:
+  update-pr-title:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,6 +25,13 @@ jobs:
             Modify this PR title to match conventional commit styling:
 
             ${{ github.event.pull_request.title }}
+
+      - name: Suggest update
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_TITLE: ${{ steps.prompt.outputs.text }}
+
+        run: gh pr comment ${{ github.event.pull_request.number }} --body "$PR_TITLE" --repo ${{ github.repository }}
 
       - name: Update PR Title
         env:
