--- a/.github/workflows/pr-title-checker.yml
+++ b/.github/workflows/pr-title-checker.yml
@@ -34,7 +34,7 @@ jobs:
           gh pr comment ${{ github.event.pull_request.html_url }} \
             --body "## Suggested PR Title Update\n${{ env.PR_TITLE }}"
 
-      - name: Update PR Title # Not safe
+      - name: Update PR Title # Use at your own risk!
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_TITLE: ${{ steps.prompt.outputs.text }}
