--- a/.github/workflows/test-ref.yml
+++ b/.github/workflows/test-ref.yml
@@ -39,6 +39,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.ref }}
       - name: Dump GitHub event context
         env:
           GITHUB_EVENT: ${{ toJson(github.event) }}
