--- a/.github/workflows/test-ref.yml
+++ b/.github/workflows/test-ref.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Add repository content to workflow
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
       - name: Dump GitHub event context
         env:
           GITHUB_EVENT: ${{ toJson(github.event) }}
@@ -39,7 +41,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.ref }}
       - name: Dump GitHub event context
         env:
           GITHUB_EVENT: ${{ toJson(github.event) }}
