--- a/.github/workflows/test-ref.yml
+++ b/.github/workflows/test-ref.yml
@@ -31,7 +31,7 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           add: "README.md"
-          message: "Bump 1"
+          message: "Bump terraform"
           default_author: github_actions
 
   release:
@@ -52,7 +52,7 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           add: "README.md"
-          message: "Bump 1"
+          message: "Bump release"
           default_author: github_actions
 
         
