--- a/.github/workflows/context-dump.yml
+++ b/.github/workflows/context-dump.yml
@@ -1,10 +1,11 @@
 on:
   branch_protection_rule:
   pull_request_review:
+  page_build:
 
   
 jobs:
-  hello:
+  dump-context:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
