--- a/.github/workflows/test-exercise.yml
+++ b/.github/workflows/test-exercise.yml
@@ -11,16 +11,22 @@ permissions:
 jobs:
 
   start_exercise:
-    name: Start Exercise
-    uses: skills/exercise-toolkit/.github/workflows/start-exercise.yml@v0.5.0
-    with:
-      exercise-title: "Code with Codespaces"
-      intro-message: "Let's create a pre-configured environment to simplify development!"
+    name: Restart Exercise
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+
+      - name: Get response templates
+        run: gh issue reopen https://github.com/FidelusAleksander/github-playground/issues/76
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   finish_exercise:
     name: Finish Exercise
     needs: [start_exercise]
     uses: skills/exercise-toolkit/.github/workflows/finish-exercise.yml@add-socials-section
     with:
-      issue-url: ${{ needs.start-exercise.outputs.issue-url }}
+      issue-url: https://github.com/FidelusAleksander/github-playground/issues/76
 
